Randomly changing wind